# backend/docs/swagger.json
@@ -1,4 +1,8 @@
 {
+    "schemes": [
+        "http",
+        "https"
+    ],
     "swagger": "2.0",
     "info": {
         "description": "This is an API for PeacefulParenting.ai",
@@ -9,11 +13,11 @@
         },
         "version": "1.0"
     },
-    "basePath": "/api",
+    "basePath": "/api/v1",
     "paths": {
-        "/v1/questions": {
+        "/questions": {
             "get": {
-                "description": "Get all questions",
+                "description": "Get a list of questions with optional sorting, range and filtering parameters.",
                 "consumes": [
                     "application/json"
                 ],
@@ -23,30 +27,41 @@
                 "tags": [
                     "Questions"
                 ],
-                "summary": "Get all questions",
+                "summary": "Get a list of questions",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Sort key and order ['key','order'] (default is ['id','DESC'])",
+                        "name": "sort",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Range for pagination [start, end] (default is [75, 99])",
+                        "name": "range",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filtering by category field {'category':'value'} (default is {})",
+                        "name": "filter",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handlers.Question"
-                        }
-                    },
-                    "301": {
-                        "description": "Moved Permanently",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.ResponseHTTP"
-                        }
-                    },
-                    "403": {
-                        "description": "Forbidden",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.ResponseHTTP"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.ResponseHTTP"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/types.Question"
+                            }
+                        },
+                        "headers": {
+                            "X-Total-Count": {
+                                "type": "string",
+                                "description": "Total count of questions"
+                            }
                         }
                     }
                 }
@@ -54,14 +69,25 @@
         }
     },
     "definitions": {
-        "handlers.Question": {
+        "types.Question": {
             "type": "object",
             "properties": {
                 "answerCount": {
                     "type": "integer"
                 },
                 "category": {
-                    "type": "string"
+                    "type": "string",
+                    "enum": [
+                        "child",
+                        "toddler",
+                        "preteen",
+                        "infant",
+                        "teen",
+                        "adult",
+                        "household",
+                        "relatives",
+                        "other"
+                    ]
                 },
                 "createdAt": {
                     "type": "string"
@@ -77,18 +103,6 @@
                 },
                 "voteCount": {
                     "type": "integer"
-                }
-            }
-        },
-        "handlers.ResponseHTTP": {
-            "type": "object",
-            "properties": {
-                "data": {},
-                "message": {
-                    "type": "string"
-                },
-                "success": {
-                    "type": "boolean"
                 }
             }
         }
